--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.10.0",
     "firebase": "^11.9.1",
     "iron-session": "^8.0.4",
+    "js-cookie": "^3.0.5",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
