--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material-nextjs": "^7.1.1",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
+    "emoji-picker-react": "^4.12.2",
     "firebase": "^11.9.1",
     "iron-session": "^8.0.4",
     "js-cookie": "^3.0.5",
