--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^11.9.1",
     "iron-session": "^8.0.4",
     "js-cookie": "^3.0.5",
+    "mui-tiptap": "^1.18.1",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
