--- a/package.json
+++ b/package.json
@@ -13,10 +13,20 @@
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.0",
+    "@mantine/tiptap": "^8.1.1",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@mui/material-nextjs": "^7.1.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tiptap/core": "^2.14.0",
+    "@tiptap/extension-heading": "^2.14.0",
+    "@tiptap/extension-image": "^2.14.0",
+    "@tiptap/extension-placeholder": "^2.14.0",
+    "@tiptap/extension-table": "^2.14.0",
+    "@tiptap/extension-underline": "^2.14.0",
+    "@tiptap/pm": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "axios": "^1.10.0",
     "emoji-picker-react": "^4.12.2",
     "firebase": "^11.9.1",
